Fixed white space
Fixed white space on the bottom of the Contact Us page by adding a margin to the bottom of the contact-us-text class.

--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ hr.light-100 {
     color: white;
     background-color: #690002;
     font-size: 150%;
+    margin-bottom: 200px;
 }
 .contact-header {
     color: white;
